syntax = "proto3";

package api;

service UUID {
  rpc Fetch(FetchRequest) returns (FetchReply) {}
}

message FetchRequest {
  string service_name = 1;
  string container_name = 2;
  int32 need_count = 3;
}

message UUIDRange {
  int32 service_id = 1;
  int32 container_id = 2;
  int32 sequence_id_start = 3;
  int32 sequence_id_end = 4;
}

message FetchReply {
  repeated UUIDRange items = 1;
}
